# cameracapture

capture/: CMakeLists.txt  main.cpp  run.sh
display/: CMakeLists.txt  fragment.glsl  main.cpp  run.sh  vertex.glsl
image/: image.cpp  image.hpp
net/: netaddress.cpp  netaddress.hpp  netmessage.cpp  netmessage.hpp  tcpsocket.cpp  tcpsocket.hpp  udpsocket.cpp  udpsocket.hpp
opengl/: indexbuffer.cpp  indexbuffer.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexbuffer.cpp  vertexbuffer.hpp
streams/: fileinputstream.cpp  fileinputstream.hpp  fileoutputstream.cpp  fileoutputstream.hpp  memoryinputstream.cpp  memoryinputstream.hpp  memoryoutputstream.cpp  memoryoutputstream.hpp
